chat-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service-deployment
  labels:
    app: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
      - name: chat-service
        image: veljkoskrbic/skribblol-chat-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5002
