chat-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service-service
spec:
  type: NodePort
  selector:
    app: chat-service
  ports:
  - name: http
    port: 80
    targetPort: 5002
    nodePort: 30002
